@@ -3,6 +3,7 @@
                               KijiMR Release Notes
 
 Version 1.0.0-rc61
+  * KIJIMR-180. Removes deprecated getEntityId() from ProducerContext.
   * KIJIMR-52. KijiTableKeyValueStore reader should look up by EntityId, not by
       String.
   * KIJIMR-114. Declare various methods of MapReduceJobBuilder as 'final'.
